--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "main": "scripts/main.js",
   "scripts": {
     "start": "electron ."
+  },
+  "devDependencies": {
+    "electron": "^1.8.4"
   }
 }
